# SPECTRA

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  config.yaml  config_custom_plotting.yaml  config_minimal_plotting.yaml  config_phangs.yaml  config_presentation_plotting.yaml  config_rubin.yaml  config_rubin_batch.yaml  config_rubin_cone_search.yaml  config_rubin_from_csv.yaml  config_rubin_galex.yaml  config_single_fits.yaml  data_query.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  run.py  setup.py  spectra_cli.py  test_fits_load.py
data/: fornax_gc_photometry.csv
docs/: EXAMPLE_MULTIBAND_CONFIG.md  INSTALL.md  TESTING.md  USAGE.md  _config.yml  _toc.yml  configuration.md  index.md  inputs.md  installation.md  intro.md  outputs.md
example_configs/: config_custom_plotting.yaml  config_dat_highz.yaml  config_dp02_bright_galaxies.yaml  config_dp02_clusters.yaml  config_dp02_from_csv.yaml  config_dp02_test.yaml  config_minimal_plotting.yaml  config_phangs.yaml  config_phangs_no_dust.yaml  config_presentation_plotting.yaml  config_rubin.yaml  config_rubin_batch.yaml  config_rubin_cone_search.yaml  config_rubin_from_csv.yaml  config_rubin_galex.yaml  config_single_fits.yaml
notebooks/: SPECTRA_RSP_Tutorial.ipynb
scripts/: plot_spectra_vs_cigale.py  prepare_cigale_input.py  query_dp02_test_objects.py  run_cigale_phangs.py
src/: cli.py  fit.py  io.py  likelihood.py  main.py
tests/: test_data_loaders.py  test_fitter.py  test_fornax_loader.py  test_integration.py  test_likelihood.py  test_mcmc_runner.py  test_pipeline.py  (+2 more)
(+70 files in other folders)
